--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@ title: "About"
 sidebar: false
 ---
 
-## Workshop 1 - Reproducible Data Analysis with R - Teaching Team
+## Reproducible Data Analysis with R - Teaching Team
 
 ::: {.grid}
 
