--- a/materials/1-workshop1/0-welcome/slides.qmd
+++ b/materials/1-workshop1/0-welcome/slides.qmd
@@ -119,11 +119,19 @@ We've created a true-to-life "medium dimensional" dataset that we'll use for all
 
 - about 40 participants split across two treatment arms
 - three time points (before treatment, after treatment, and longer follow-up)
-- several measurements per time-point
+- several measurements per time-point including cytokine concentrations and flow cytometry data  (more from Salina and Suuba next!)
 
 We've also created group datasets so you can practice applying what you've learned on new data.  
 
-{{< include ../_wooclap.qmd >}}  
+## Why this format
+
+We've taught workshops here before where we packed a lot (too much) into one week.
+
+Based on feedback, we're trying to focus on R for the whole week, and to make the example data relevant to a lot of your actual work.
+
+However, many of you in the room know a lot more immunology than us - and even if you know none you can learn the R and generalize it to your research.
+
+This is the first time running this new workshop - please give lots of feedback on how to improve it for next time.
 
 ## The content of this workshop
 
