--- a/materials/1-workshop1/0-welcome/slides.qmd
+++ b/materials/1-workshop1/0-welcome/slides.qmd
@@ -51,7 +51,7 @@ Ask questions at **#workshop-questions** on [https://discord.gg/UDAsYTzZE](https
 :::{layout="[[4, 5, 1]]" layout-valign=center}
 ![](images/sticky.jpeg){fig-alt="Picture of a laptop with a red sticky note stuck to the top." width=540}
 
-During an activity, place a [**blue**]{style="color: DarkTurquoise"}  sticky on your laptop if you're good to go and a [**pink**]{style="color: hotpink"} sticky if you want help.
+During an activity, a [**pink**]{style="color: hotpink"} sticky if you want help.
 :::
 
 :::footer
@@ -115,7 +115,7 @@ Who are we?
 
 ## The premise of the workshop
 
-We've created a true-to-life "medium dimensional" dataset that we'll use for all instruction
+We've created a true-to-life "medium dimensional" dataset that we'll use for all instruction 
 
 - about 40 participants split across two treatment arms
 - three time points (before treatment, after treatment, and longer follow-up)
@@ -145,4 +145,4 @@ As instructors we're going to be trying to teach at the right pace to keep every
 The materials will stay on the website forever for you to work through at your own pace.  
 :::
 
-{{< include ../_wooclap.qmd >}}  
+{{< include ../_wooclap.qmd >}}
