--- a/materials/1-workshop1/5-tableone/index.qmd
+++ b/materials/1-workshop1/5-tableone/index.qmd
@@ -14,4 +14,17 @@ format:
 <iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
 
+
+## Research Questions
+
+{{< include _01_questions.qmd >}}
+
+## Refresher
+
+```{=html}
+<iframe allowfullscreen frameborder="0" height="420" width="747" mozallowfullscreen src="https://app.wooclap.com/DURBAN/questionnaires/652f77f770a3432315b34c75" style="border: 1px solid #2e3846;"></iframe>
+```
+
+## Notes
+
 {{< include _01_notes.qmd >}}
