--- a/index.qmd
+++ b/index.qmd
@@ -24,6 +24,48 @@ This week of content will prepare you to use R, RStudio, and Quarto for data ana
 :::
 
 
+# Group Projects
+
+
+## Wednesday PM Session
+
+Session Structure  
+- 1:30-2:00:  
+  - Read Research Project description below for your
+  - Download project data files and put them in your folder
+  - Make a new .qmd file for this project.
+- 2:00-3:00  
+  - Load the demographic table into an R tibble.  
+  - Make notes about what each column name is and what it means.  
+  - Examine and note basic parameters (using R commands) - number of participants, visit structure, number of features measured for each, type of data measured (binary, categorical)  
+  - Plot a histogram of all numeric features (eg, distribution of age) and bar plots for counts of categorical variables (eg. how many female).  
+- **3:00 - 3:30 - Break**  
+- 3:30 - 5:00  
+    - Preproccessing the data to prepare for `tableone`  
+    - Use `tableone` for the dataset  
+
+## Research Project A - Does eating yogurt change the vaginal microbiome? 
+
+### Study Description
+
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. Absolute abundance of bacteria was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in copies/ml of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at two timepoints, pre and post antibiotic treatment.
+
+### Primary Aim
+
+To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.
+
+## Research Project B - Does birth control change inflammation during menses?
+
+### Study Description
+
+This is an observational study to evaluate the relationship between birth control and vaginal inflammation In response to menstruation. Absolute abundance of bacteria was measured by 3 qPCR assays (for total Bacteria, L. crispatus, L. iners). Cytokine levels (in copies/ml of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at four timepoints; before, at the start, the end, and after menstruation.  
+
+### Primary Aim
+
+To investigate whether taking birth control is associated with vaginal inflammation throughout the menstrual cycle.
+
+---
+
 ## Welcome to the workshop!
 
 Network: KTB Free Wifi (no password needed)
