--- a/materials/1-workshop1/group-projects/index.qmd
+++ b/materials/1-workshop1/group-projects/index.qmd
@@ -5,15 +5,7 @@ format:
     toc: true
 ---
 
-> Get to know your neighbors and instructors and learn what to expect from this workshop
-
-
-## Slides
-[Make slides full screen](slides.qmd)
-
-```{=html}
-<iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
-```
+# Group Projects
 
 ## Research Project A - Does eating yogurt change the vaginal microbiome? 
 
@@ -25,10 +17,7 @@ This is a randomized controlled trial to study whether yogurt consumption has an
 
 To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.
 
- 
-
 ## Research Project B - Does birth control change inflammation during menses?
-
 
 ### Study Description
 
@@ -38,7 +27,6 @@ This is an observational study to evaluate the relationship between birth contro
 
 To investigate whether taking birth control is associated with vaginal inflammation throughout the menstrual cycle.
 
- 
 ## Wednesday PM Session
 
 Session Structure
@@ -54,3 +42,4 @@ Session Structure
 - 3:30 - 5:00  
   Preproccessing the data to prepare for `tableone`  
   Use `tableone` for the dataset  
+  
