--- a/materials/1-workshop1/6-hypothesis-testing/index.qmd
+++ b/materials/1-workshop1/6-hypothesis-testing/index.qmd
@@ -14,7 +14,7 @@ format:
 ```
 
 ```{=html}
-<h2><a href="https://raw.githubusercontent.com/elsherbini/durban-data-science-for-biology/main/materials/1-workshop1/6-hypothesis-testing/module-6-hands-on.qmd" download>Download the `.qmd` to do the exercise</a></h2>
+<h2><a href="https://raw.githubusercontent.com/elsherbini/durban-data-science-for-biology/main/materials/1-workshop1/6-hypothesis-testing/module-6-hands-on.qmd" download>Download the `.qmd` to do the exercise. Select all and copy into a .qmd file in RStudio</a></h2>
 ```
 
 ---
